ver 0.15.8 (2009/??/??)


ver 0.15.7 (2009/12/27)
* archive:
  - close archive when stream is closed
  - iso, zip: fixed memory leak in destructor
* input:
  - file: don't fall back to parent directory
  - archive: fixed memory leak in error handler
* tags:
  - id3: fix ID3v1 charset conversion
* decoders:
  - eliminate jitter after seek failure
  - ffmpeg: don't try to force stereo
  - wavpack: allow fine-grained seeking
* mixer: explicitly close all mixers on shutdown
* mapper: fix memory leak when playlist_directory is not set
* mapper: apply filesystem_charset to playlists
* command: verify playlist name in the "rm" command
* database: return multiple tag values per song


ver 0.15.6 (2009/11/18)
* input:
  - lastfm: fixed variable name in GLib<2.16 code path
  - input/mms: require libmms 0.4
* archive:
  - zzip: require libzzip 0.13
* tags:
  - id3: allow 4 MB RIFF/AIFF tags
* decoders:
  - ffmpeg: convert metadata
  - ffmpeg: align the output buffer
  - oggflac: rewind stream after FLAC detection
  - flac: fixed CUE seeking range check
  - flac: fixed NULL pointer dereference in CUE code
* output_thread: check again if output is open on PAUSE
* update: delete ignored symlinks from database
* database: increased maximum line length to 32 kB
* sticker: added fallback for sqlite3_prepare_v2()


ver 0.15.5 (2009/10/18)
* input:
  - curl: don't abort if a packet has only metadata
  - curl: fixed endless loop during buffering
* tags:
  - riff, aiff: fixed "limited range" gcc warning
* decoders:
  - flac: fixed two memory leaks in the CUE tag loader
* decoder_thread: change the fallback decoder name to "mad"
* output_thread: check again if output is open on CANCEL
* update: fixed memory leak during container scan


ver 0.15.4 (2009/10/03)
* decoders:
  - vorbis: revert "faster tag scanning with ov_test_callback()"
  - faad: skip assertion failure on large ID3 tags
  - ffmpeg: use the "artist" tag if "author" is not present
* output:
  - osx: fix the OS X 10.6 build
