@@ -467,6 +467,7 @@ static const char *const ffmpeg_mime_types[] = {
 	"application/ogg",
 	"application/x-ms-wmz",
 	"application/x-ms-wmd",
+	"application/x-ogg",
 	"application/x-shockwave-flash",
 	"application/x-shorten",
 	"audio/8svx",
@@ -481,6 +482,7 @@ static const char *const ffmpeg_mime_types[] = {
 	"audio/ogg",
 	"audio/qcelp",
 	"audio/vorbis",
+	"audio/vorbis+ogg",
 	"audio/x-8svx",
 	"audio/x-16sv",
 	"audio/x-aac",
@@ -498,6 +500,9 @@ static const char *const ffmpeg_mime_types[] = {
 	"audio/x-ms-wma",
 	"audio/x-ms-wax",
 	"audio/x-musepack",
+	"audio/x-ogg",
+	"audio/x-vorbis",
+	"audio/x-vorbis+ogg",
 	"audio/x-pn-realaudio",
 	"audio/x-pn-multirate-realaudio",
 	"audio/x-speex",
