@@ -357,9 +357,11 @@ fail:
 
 static const char *const oggflac_suffixes[] = { "ogg", "oga", NULL };
 static const char *const oggflac_mime_types[] = {
-	"audio/x-flac+ogg",
 	"application/ogg",
 	"application/x-ogg",
+	"audio/ogg",
+	"audio/x-ogg",
+	"audio/x-flac+ogg",
 	NULL
 };
 
