@@ -1,4 +1,6 @@
 ver 0.15.8 (2009/??/??)
+* decoders:
+  - ffmpeg, flac, vorbis: added more flac/vorbis MIME types
 
 
 ver 0.15.7 (2009/12/27)
